Update models api
